--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 <body class="index-body">
     <div class="container">
         <div class="box">
-            <button class="button">
-                <a href="troste.html">SAPA</a> 
-            </button>
+                <a href="troste.html"><button class="button">SAPA</button></a> 
         </div>
     </div>
 
