--- a/troste.html
+++ b/troste.html
@@ -18,10 +18,18 @@
         </div>
     </div>
 
+    <div>
+        > Odio trabajar jjajsa<br>
+        > Y la mlp U me puso horarios desde las 5pm :D<br>
+        > Por que eres tan linda??<br><br>
+        Escribo esto pq se que nunca lo lo vas a ver xd
+    </div>
+
     <div class="container2">
         <div class="box2">
             <img src="https://i.pinimg.com/originals/e2/20/d5/e220d5381937084df04ece829dd6023a.jpg" alt="" class="img-spiderman">
         </div>
+
         <div class="box22">
             <img src="https://cdn.custom-cursor.com/packs/5287/food-ring-pop-strawberry-pack.png" alt="" class="img-ring">
         </div>
